Common:20251029:SVM:part 2 for building Android based source

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,10 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
+rxJava="3.1.12"
+rxAndroid = "3.0.2"
+rxKotlin = "3.0.1"
+hiltVersion = "2.44"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,6 +28,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+io-reactivex-rxjava3 = {group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
+io-reactivex-rxandroid3 = {group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxAndroid"}
+io-reactivex-rxkotlin3 = {group = "io.reactivex.rxkotlin3", name = "rxandroid", version.ref = "rxKotlin"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
