--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ composeBom = "2024.09.00"
 rxJava="3.1.12"
 rxAndroid = "3.0.2"
 rxKotlin = "3.0.1"
-hiltVersion = "2.44"
+hiltVersion = "2.46.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,10 +30,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 io-reactivex-rxjava3 = {group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
 io-reactivex-rxandroid3 = {group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxAndroid"}
-io-reactivex-rxkotlin3 = {group = "io.reactivex.rxkotlin3", name = "rxandroid", version.ref = "rxKotlin"}
+io-reactivex-rxkotlin3 = {group = "io.reactivex.rxjava3", name = "rxkotlin", version.ref = "rxKotlin"}
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion"}
+hilt-complier = { group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hiltVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
