--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
 agp = "8.11.1"
-kotlin = "2.0.21"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2024.09.00"
+composeBom = "2025.08.00"
 rxJava="3.1.12"
 rxAndroid = "3.0.2"
 rxKotlin = "3.0.1"
-hiltVersion = "2.46.1"
-hiltJetpackVersion = "1.1.0"
-gsonVersion = "2.10.1"
-gsonRetrofit = "2.9.0"
+hiltVersion = "2.57.2"
+hiltJetpackVersion = "1.2.0"
+gsonVersion = "2.13.2"
+gsonRetrofit = "3.0.0"
 roomVersion = "2.8.3"
-kspVerson = "2.0.21-1.0.27"
-retrofitVersion = "2.9.0"
-composeRuntimeVersion = "1.6.0"
+kspVersion = "2.0.21-1.0.27"
+retrofitVersion = "3.0.0"
+composeRuntimeVersion = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,6 +50,7 @@ retrofit2-adapter-rxjava3 = {group = "com.squareup.retrofit2", name = "adapter-r
 hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref= "hiltJetpackVersion"}
 hilt-work = {group = "androidx.hilt", name = "hilt-work", version.ref= "hiltJetpackVersion"}
 hilt-complier = {group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltJetpackVersion"}
+hilt-plugin = {group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "hiltVersion"}
 compose-runtime = {group = "androidx.compose.runtime", name = "runtime", version.ref = "composeRuntimeVersion" }
 compose-livedata = {group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeRuntimeVersion" }
 compose-rxjava = {group = "androidx.compose.runtime", name = "runtime-rxjava3", version.ref = "composeRuntimeVersion" }
@@ -59,4 +60,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
-kotlin-ksp = { id = "com.google.devtools.ksp" , version.ref = "kspVerson"}
+kotlin-ksp = { id = "com.google.devtools.ksp" , version.ref = "kspVersion"}
