Common:20251123:SVM:fix presentation layer then removing Hilt dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,14 +11,13 @@ composeBom = "2024.09.00"
 rxJava="3.1.12"
 rxAndroid = "3.0.2"
 rxKotlin = "3.0.1"
-hiltVersion = "2.51.1"
-hiltJetpackVersion = "1.2.0"
 gsonVersion = "2.13.2"
-gsonRetrofit = "2.9.0"
 roomVersion = "2.8.3"
 kspVersion = "2.0.21-1.0.27"
 retrofitVersion = "2.9.0"
 composeRuntimeVersion = "1.9.0"
+workManager = "2.9.0"
+kotlinxMetadataVersion = "0.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,26 +37,21 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 io-reactivex-rxjava3 = {group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxJava"}
 io-reactivex-rxandroid3 = {group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxAndroid"}
 io-reactivex-rxkotlin3 = {group = "io.reactivex.rxjava3", name = "rxkotlin", version.ref = "rxKotlin"}
-hilt-android = {group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion"}
-dagger-hilt-complier = {group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltVersion"}
 gson-google = {group = "com.google.code.gson", name = "gson", version.ref = "gsonVersion"}
-gson-retrofit = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gsonRetrofit"}
 room-runtime = {group = "androidx.room", name = "room-runtime", version.ref = "roomVersion"}
 room-complier = {group = "androidx.room", name = "room-compiler", version.ref = "roomVersion"}
 retrofit2-retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion"}
 retrofit2-converter-gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitVersion"}
 retrofit2-adapter-rxjava3 = {group = "com.squareup.retrofit2", name = "adapter-rxjava3", version.ref = "retrofitVersion"}
-hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref= "hiltJetpackVersion"}
-hilt-work = {group = "androidx.hilt", name = "hilt-work", version.ref= "hiltJetpackVersion"}
-hilt-complier = {group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltJetpackVersion"}
-hilt-plugin = {group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "hiltVersion"}
 compose-runtime = {group = "androidx.compose.runtime", name = "runtime", version.ref = "composeRuntimeVersion" }
 compose-livedata = {group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeRuntimeVersion" }
 compose-rxjava = {group = "androidx.compose.runtime", name = "runtime-rxjava3", version.ref = "composeRuntimeVersion" }
+work-runtime = {group = "androidx.work", name = "work-runtime", version.ref = "workManager"}
+work-ktx = {group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager"}
+kotlinx-metadata-jvm = { group = "org.jetbrains.kotlinx", name = "kotlinx-metadata-jvm", version.ref = "kotlinxMetadataVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
 kotlin-ksp = { id = "com.google.devtools.ksp" , version.ref = "kspVersion"}
