--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ retrofitVersion = "2.9.0"
 composeRuntimeVersion = "1.9.0"
 workManager = "2.9.0"
 kotlinxMetadataVersion = "0.9.0"
+viewModelCompose = "2.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,6 +50,7 @@ compose-rxjava = {group = "androidx.compose.runtime", name = "runtime-rxjava3", 
 work-runtime = {group = "androidx.work", name = "work-runtime", version.ref = "workManager"}
 work-ktx = {group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager"}
 kotlinx-metadata-jvm = { group = "org.jetbrains.kotlinx", name = "kotlinx-metadata-jvm", version.ref = "kotlinxMetadataVersion" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelCompose"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
